<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">DownloadProject</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The %s repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_short_name">Glide</string>
    <string name="glide_radio">Glide - Image Loading Library by BumpTech</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>

    <string name="project_short_name">LoadApp</string>
    <string name="project_radio">LoadApp - Current repository by Udacity</string>
    <string name="project_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>

    <string name="retrofit_short_name">Retrofit</string>
    <string name="retrofit_radio">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>

    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="detail_button_label">OK</string>
</resources>
