<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fileName"
            type="String" />
        <variable
            name="status"
            type="String" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail"
        app:layoutDescription="@xml/content_detail_scene"
        android:id="@+id/detailActivityContent">


        <TextView
            android:id="@+id/fileNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/file_name_label" />

        <TextView
            android:id="@+id/fileNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{fileName}"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status_label" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{status}"
            android:textColor="@color/colorPrimaryDark" />
        <Button
            android:id="@+id/leaveDetailPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_label"
            android:textColor="@color/white"
            android:background="@color/colorAccent"/>
    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>