<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/download_icon"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_baseline_cloud_download_24"
            app:layout_constraintBottom_toTopOf="@+id/radio_choices"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:background="@color/colorPrimaryDark"
            android:tint="@color/purple"/>

        <RadioGroup
            android:id="@+id/radio_choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintTop_toBottomOf="@+id/download_icon">

            <RadioButton
                android:id="@+id/glide_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@string/glide_radio" />

            <RadioButton
                android:id="@+id/project_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@string/project_radio" />

            <RadioButton
                android:id="@+id/retrofit_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_radio" />
        </RadioGroup>

        <Button
            android:id="@+id/custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_choices"
            app:layout_constraintVertical_bias="0.156"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="Download"
            />
    <!--    <com.udacity.LoadingButton-->
    <!--        android:id="@+id/custom_button"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:layout_margin="20dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/radio_choices"-->
    <!--        app:layout_constraintVertical_bias="0.156" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>